# cas

./: .env.example  .gitignore  CAS-DEEP-DIVE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  investigation-mcp-worktree.md
cas-cli/: Cargo.toml  Makefile  build.rs
cas-cli/benches/: code_indexing.rs  code_review_pipeline.rs  memory_overlap.rs  search_quality.rs
cas-cli/docs/: ARCHITECTURE.md  CLIENT_CAPABILITIES.md  CONTRIBUTING.md  MIGRATIONS.md  PROXY_SETUP.md  TUI_TEST_FRAMEWORK_DESIGN.md  WORKTREE_SCHEMA_DESIGN.md
cas-cli/src/: agent_id.rs  async_runtime.rs  builtins.rs  duplicate_check.rs  error.rs  harness_policy.rs  lib.rs  logging.rs  main.rs  otel.rs  sentry.rs
cas-cli/src/cli/: auth.rs  bridge.rs  changelog.rs  claude_md.rs  cloud.rs  codemap_cmd.rs  config_tui.rs  device.rs  doctor.rs  factory_tooling.rs  hook.rs  init.rs  interactive.rs  known_repos.rs  list.rs  mcp_cmd.rs  memory.rs  mod.rs  open.rs  project_overview_cmd.rs  provider_default.rs  queue.rs  status.rs  statusline.rs  sweep.rs  update.rs  update_transaction.rs  worktree.rs
cas-cli/src/cloud/: comments.rs  config.rs  coordinator.rs  device.rs  mod.rs
cas-cli/src/config/: hooks.rs  mod.rs  mod_tests.rs  runtime.rs  settings.rs
cas-cli/src/consolidation/: mod.rs
cas-cli/src/daemon/: decay.rs  indexing.rs  maintenance.rs  mod.rs  observation.rs  queue.rs  tests.rs  types.rs  watcher.rs
cas-cli/src/extraction/: mod.rs
cas-cli/src/hooks/: context.rs  handlers.rs  mod.rs  scorer.rs  transcript.rs  types.rs
cas-cli/src/hybrid_search/: background.rs  cache.rs  code.rs  entity_search.rs  filter_grammar.rs  frontmatter.rs  graph.rs  hybrid.rs  id_utils.rs  metrics.rs  mod.rs  scorer.rs  search_index_impl.rs  search_index_query.rs
cas-cli/src/mcp/: daemon.rs  mod.rs  socket.rs
cas-cli/src/migration/: detector.rs  mod.rs
cas-cli/src/notifications/: channel.rs  mod.rs  types.rs
cas-cli/src/orchestration/: mod.rs  names.rs
cas-cli/src/rules/: mod.rs
cas-cli/src/store/: detect.rs  known_repos.rs  layered.rs  markdown.rs  mod.rs  notifying_entry.rs  notifying_rule.rs  notifying_skill.rs  notifying_task.rs  share_policy.rs  syncing.rs  syncing_entry.rs  syncing_skill.rs  syncing_task.rs
cas-cli/src/sync/: mod.rs  skills.rs
cas-cli/src/telemetry/: mod.rs
cas-cli/src/tracing/: builder.rs  claude_wrapper.rs  mod.rs  store.rs  tests.rs  tool_trace.rs  types.rs
cas-cli/src/ui/: mod.rs
cas-cli/src/worktree/: discovery.rs  git.rs  mod.rs  salvage.rs  sweep.rs
cas-cli/tests/: active_team_id_integration_test.rs  auth_integration_test.rs  blame_attribution_test.rs  bridge_server_sse_test.rs  bridge_server_test.rs  cli_test.rs  code_review_e2e_test.rs  code_review_parity_test.rs  component_output_test.rs  distributed_factory_test.rs  e2e_test.rs  factory_codex_skill_guardrails.rs  factory_latency_test.rs  factory_mcp_ops_test.rs  factory_parity_test.rs  factory_probe_comm_test.rs  factory_server_test.rs  hook_schema.rs  integrate_lifecycle_test.rs  jail_guard_test.rs  loop_test.rs  mcp_protocol_test.rs  mcp_proxy_test.rs  mcp_tools_test.rs  memory_share_test.rs  multi_agent_test.rs  openclaw_bridge_test.rs  proptest_test.rs  provider_shortcuts_test.rs  pull_no_reenqueue_test.rs  push_rehome_guard_test.rs  search_frontmatter_test.rs  search_scoring_test.rs  search_utf8_regression_test.rs  service_tools_test.rs  team_memories_e2e_test.rs  team_pull_wiring_test.rs  team_scope_e2e_test.rs  team_set_slug_resolution_test.rs  team_sync_test.rs  (+3 more)
cas-cli/tests/common/: mod.rs
cas-cli/tests/data/: verifier_close_reasons.md
cas-cli/tests/distributed_factory_test_cases/: tests.rs
cas-cli/tests/e2e/: agent_isolation.rs  factory_tui_headful.rs  memory_workflow.rs  mod.rs  multi_agent.rs  rule_workflow.rs  task_dependencies.rs  task_lifecycle.rs  team_sync.rs  verification_gates.rs  worktree_lifecycle.rs
cas-cli/tests/factory_server_test_cases/: tests.rs
cas-cli/tests/fixtures/: cas_instance.rs  hook_instance.rs  mock_mcp_vercel_server.py  mock_server.rs  mod.rs
cas-cli/tests/hooks_test/: exit_and_summary.rs  learning_rule_duplicate.rs  mod.rs  post_tool_and_flow.rs
cas-cli/tests/mcp_tools_test/: edge_cases.rs  field_coverage_tests.rs  memory_remember_contract.rs  memory_tools.rs  rule_tools.rs  search_tools.rs  skill_tools.rs  spec_tools.rs  support.rs  system_tools.rs
cas-cli/tests/multi_agent_test_cases/: tests.rs
cas-cli/tests/proptest/: mod.rs  search_properties.rs
cas-cli/tests/search_scoring_test_cases/: tests.rs
cas-cli/tests/snapshots/: component_output_test__doctor_snapshot.snap  component_output_test__doctor_snapshot.snap.new  component_output_test__status_empty_snapshot.snap
crates/cas-code/: Cargo.toml
crates/cas-code/src/: error.rs  lib.rs  types.rs
crates/cas-core/: Cargo.toml
crates/cas-core/src/: dedup.rs  error.rs  lib.rs
crates/cas-core/tests/: hook_schema.rs
crates/cas-diffs/: Cargo.toml
crates/cas-diffs/src/: diff_files.rs  highlight.rs  inline_diff.rs  iter.rs  lib.rs  parser.rs  widget.rs
crates/cas-factory-protocol/: CHANGELOG.md  Cargo.toml
crates/cas-factory-protocol/benches/: compression_bench.rs
crates/cas-factory-protocol/src/: codec.rs  compression.rs  lib.rs  transport.rs
crates/cas-factory-protocol/tests/: protocol_tests.rs
crates/cas-mcp/: Cargo.toml
crates/cas-mcp-proxy/: Cargo.toml  README.md
crates/cas-mcp-proxy/src/: config.rs  lib.rs
crates/cas-mcp/src/: daemon.rs  error.rs  lib.rs  types.rs
crates/cas-pty/: Cargo.toml
crates/cas-pty/src/: error.rs  lib.rs  pty.rs
crates/cas-recording/: Cargo.toml  README.md
crates/cas-recording/src/: export.rs  format.rs  lib.rs  reader.rs  writer.rs
crates/cas-search/: Cargo.toml
crates/cas-search/src/: bm25.rs  code_search.rs  document.rs  error.rs  grep.rs  hybrid.rs  lib.rs  lmdb_store.rs  metrics.rs  parallel.rs  scorer.rs  traits.rs
crates/cas-search/tests/: bm25_integration.rs  code_search_integration.rs  (+1 more)
crates/cas-store/: Cargo.toml
crates/cas-tui-test/: Cargo.toml  README.md
crates/cas-types/: Cargo.toml
(+1237 files in other folders)
