[workspace]
resolver = "2"
members = [
    "cas-cli",
    "crates/cas-types",
    "crates/cas-search",
    "crates/cas-store",
    "crates/cas-core",
    "crates/cas-mcp",
    "crates/cas-code",
    "crates/cas-mux",
    "crates/cas-pty",
    "crates/cas-recording",
    "crates/cas-factory-protocol",
    "crates/cas-diffs",
    "crates/cas-factory",
    "crates/cas-tui-test",
    "crates/cas-mcp-proxy",
    "crates/ghostty_vt_sys",
    "crates/ghostty_vt",
]

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 1

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16
strip = "debuginfo"
# panic = "unwind" is required for the MCP panic catcher (EPIC cas-c351,
# cas-a436). Do NOT switch to "abort" — a compile-time guard in
# cas-cli/src/lib.rs refuses non-test builds with panic=abort. The
# marginal size/compile wins from abort do not justify losing A2.
panic = "unwind"
