[package]
name = "cas-diffs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Diff parsing, rendering, and syntax highlighting for CAS"
license = "MIT"

[dependencies]
similar = "2.7"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "html", "regex-fancy"] }
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
regex = "1"

[dev-dependencies]
serde_json = "1.0"
