[package]
name = "code-mode-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "MCP proxy engine for CAS"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
rmcp = { version = "0.16", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }

[dev-dependencies]
tempfile = "3.14"
