[package]
name = "cas-mcp"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
description = "MCP server for CAS"
license = "MIT"

[dependencies]
cas-types = { path = "../cas-types" }
cas-store = { path = "../cas-store" }
cas-core = { path = "../cas-core" }
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
chrono = { version = "0.4", features = ["serde"] }
