[package]
name = "cas-recording"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Terminal recording format and utilities for CAS Factory"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tokio = { version = "1", features = ["fs", "io-util", "sync", "time", "rt"] }
zstd = "0.13"
tar = "0.4"
dirs = "6"
tracing = "0.1"
memmap2 = "0.9"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
