[package]
name = "cas-store"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
description = "Storage layer for CAS (Coding Agent System)"
license = "MIT"

[dependencies]
# Core types
cas-types = { path = "../cas-types" }
cas-code = { path = "../cas-code" }

# Database
rusqlite = { version = "0.38", features = ["bundled", "backup"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# File system
walkdir = "2.5"
glob = "0.3"
fs2 = "0.4"

# Utilities
rand = "0.9.2"

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3.14"
