[package]
name = "cas-types"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
description = "Core types for CAS (Coding Agent System)"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
rand = "0.9.2"
hostname = "0.4"
glob = "0.3"
sha2 = "0.10"
